--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Xếp hình | HTML/CSS/JS thuần</title>
+<title>Xếp hình | by Vinh</title>
 <style>
   :root{
     --board-max: clamp(340px, 56vh, 560px);
